# codectl

./: AGENTS.md  README.md  main.py  pyproject.toml  req.txt  todo.md
agent/: README.md  __init__.py  runner.py
backend/: main.py  pyproject.toml
backend/codeq/: __init__.py  ansible.py  models.py  py_codemod.py  repomap.py
backend/tests/: test_codeq.py  test_codeq_file_writes.py  test_new_backend.py
codeq/: __init__.py  main.py
frontend/: codeplan.schema.ts  config.ts  config.yaml  env.sample  history.ts  index.ts  kobold.ts  messages.ts  model.ts  package.json  todo.md
frontend/models/: sample-model.yaml
frontend/tests/: config.test.ts  history.test.ts  model.test.ts
tests/: test_agent_runner.py  test_cli.py
