[build-system]
    requires      = ["setuptools>=69", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "codectl"
    version = "0.1.0"
    description = "Codectl backend"
    readme = "README.md"
    requires-python = ">=3.14"
    dependencies = [
        "aiogram>=3.25.0",
        "ansible-runner>=2.4.0",
        "ansible>=11.2.0",
        "bowler>=0.9.0",
        "fastapi>=0.115.8",
        "httpx>=0.28.1",
        "libcst>=1.6.0",
        "pytest>=9.0.2",
        "smolagents[litellm]>=1.24.0",
        "tree-sitter>=0.25.2",
        "tree-sitter-python>=0.25.0",
        "typer>=0.16.1",
        "uvicorn>=0.34.0",
    ]

    [project.scripts]
        codectl   = "main:app"
        run-tests = "pytest:main"

[tool.setuptools]
    packages   = ["codeq"]
    py-modules = ["main"]

[tool.pytest.ini_options]
    pythonpath = ["."]

[tool.uv]
    package = true
